monitoring/alertmanager-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-deployment
  namespace: monitoring
  labels:
    app: alertmanager-server
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: alertmanager-server
  template:
    metadata:
      labels:
        app: alertmanager-server
    spec:
      automountServiceAccountToken: false
      containers:
        - name: alertmanager
          image: prom/alertmanager:v0.34.1
          args:
            - --config.file=/etc/alertmanager/alertmanager.yml
            - --web.external-url=https://alertmanager.ing.k3s.brickyard.whitestar.systems
          ports:
            - containerPort: 9093
          volumeMounts:
            - name: alertmanager-config-volume
              mountPath: /etc/alertmanager/
            - name: alertmanager-storage-volume
              mountPath: /alertmanager
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 250m
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9093
          readinessProbe:
            httpGet:
              path: /-/healthy
              port: 9093
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 65534
            runAsGroup: 65534
      volumes:
        - name: alertmanager-config-volume
          configMap:
            defaultMode: 420
            name: alertmanager-server-conf
        - name: alertmanager-storage-volume
          persistentVolumeClaim:
            claimName: am-pvc
