monitoring/alertmanager-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9093'
spec:
  selector:
    app: alertmanager-server
  ports:
    - port: 8080
      targetPort: 9093
