monitoring/alertmanager-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ui
  namespace: monitoring
spec:
  rules:
    - host: alertmanager.ing.k3s.brickyard.whitestar.systems
      http:
        paths:
          - backend:
              service:
                name: alertmanager
                port:
                  number: 8080
            path: /
            pathType: Prefix
